--- a/security/zap.conf
+++ b/security/zap.conf
@@ -1,4 +1,44 @@
-# ZAP baseline config example.
-# You can set specific rules to FAIL/IGNORE/INFO.
-# Keeping it minimal for demo; tune for your app.
-# Format examples (rule-id	level	comment) depend on ZAP baseline script version.
+# ============================================================
+# OWASP ZAP Baseline Scan Configuration
+# ============================================================
+# Format: <rule-id>	<status>	<comment>
+# Status values:
+#   - FAIL   = Báo lỗi và fail pipeline
+#   - WARN   = Báo cảnh báo nhưng không fail
+#   - INFO   = Chỉ ghi log
+#   - IGNORE = Bỏ qua hoàn toàn
+# ============================================================
+
+# ----- HIGH RISK - Luôn fail -----
+10016	FAIL	Web Browser XSS Protection Not Enabled
+10017	FAIL	Cross-Domain JavaScript Source File Inclusion
+10019	FAIL	Content-Type Header Missing
+10021	FAIL	X-Content-Type-Options Header Missing
+10038	FAIL	Content Security Policy (CSP) Header Not Set
+10098	FAIL	Cross-Domain Misconfiguration
+
+# ----- MEDIUM RISK - Cảnh báo -----
+10010	WARN	Cookie No HttpOnly Flag
+10011	WARN	Cookie Without Secure Flag
+10012	WARN	Password Autocomplete in Browser
+10015	WARN	Incomplete or No Cache-control and Pragma HTTP Header Set
+10020	WARN	X-Frame-Options Header Not Set
+10035	WARN	Strict-Transport-Security Header Not Set
+10037	WARN	Server Leaks Information via "X-Powered-By" HTTP Response Header
+10096	WARN	Timestamp Disclosure
+10109	WARN	Modern Web Application
+
+# ----- LOW RISK / INFO - Chỉ log -----
+10036	INFO	Server Leaks Version Information via "Server" HTTP Response Header
+10050	INFO	Retrieved from Cache
+10054	INFO	Cookie Without SameSite Attribute
+10055	INFO	CSP: Wildcard Directive
+10057	INFO	Username Hash Found
+10094	INFO	Base64 Disclosure
+10095	INFO	Backup File Disclosure
+10097	INFO	Hash Disclosure
+
+# ----- IGNORE - Bỏ qua cho demo -----
+2	IGNORE	Private IP Disclosure (internal network)
+10027	IGNORE	Information Disclosure - Suspicious Comments (too noisy)
+10104	IGNORE	User Agent Fuzzer (not relevant for baseline)
